Added updated models and updated middleware

--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -127,7 +127,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Date Hired:</span>
                                     </div>
-                                    <input type="date" class="form-control" id="datehired" name="datehired" max="<%- currentDate %>">
+                                    <input type="date" class="form-control" id="datehired" name="datehired" max="">
                                 </div>
                             </div>
                         </div>
