--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -107,10 +107,13 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">Position</span>
                                     </div>
-                                    <input class="form-control text-center custom-input" placeholder="Select/Input Position" name="positionname" id="positionname"/>
+                                    <select class="form-control text-center" name="positionlistmain" id="positionlistmain">
+                                        <option value="">Select Position</option>
+                                    </select>
+                                    <!-- <input class="form-control text-center custom-input" placeholder="Select/Input Position" name="positionname" id="positionname"/> -->
                                 </div>
-                                <div class="custom-dropdown employees-position" id="positionDropdown">
-                                </div>
+                                <!-- <div class="custom-dropdown employees-position" id="positionDropdown"> -->
+                                <!-- </div> -->
                             </div>
                         </div>
                         <div class="row mb-1">
