--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -1,9 +1,9 @@
 <!-- Modal -->
-<div class="modal fade " id="productionmaterialsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade " id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Production Materials</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Production Components</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -11,43 +11,33 @@
             <div class="custom-modal-body">
                 <div class="card">
                     <div class="card-header mt-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Update Production Materials: </h6>
+                        <h6 class="m-0 font-weight-bold table-title">Update Production Components: </h6>
                     </div>
                     <div class="card-body">
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label">Product ID</label>
-                                <input id="productidmodal" name="productidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <label class="form-label">Component ID</label>
+                                <input id="componentidmodal" name="componentidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>    
+                            </div>
+                            <div class="col-md-6">
+                                <button type="button" id="addRow" class="btn btn-outline-inventory">Add Row</button>
                             </div>
                         </div>
                         <div class="row mb-2">
-                            <div class="col-md-6">
-                                <label class="form-label">Product Name</label>
-                                <input id="productnamemodal" name="productnamemodal" type="text" class="form-control" placeholder="Enter New Product Name" aria-label="fullname" aria-describedby="basic-addon1">        
-                            </div>
-                            <div class="col-md-6">
-                                <label class="form-label">description</label>
-                                <input id="descriptionmodal" name="descriptionmodal" type="text" class="form-control" placeholder="Enter New Description" aria-label="fullname" aria-describedby="basic-addon1">        
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-6">
-                                <label class="form-label">Category</label>
-                                <select class="form-control text-center" name="categorymodal" id="categorymodal">
-                                    <option value="">-- Select Category --</option>
-                                </select>  
-                            </div>
-                            <div class="col-md-6 mb-2">
-                                <label class="form-label">Vendor ID</label>
-                                <select class="form-control text-center" name="vendoridmodal" id="vendoridmodal">
-                                    <option value="">-- Select Vendor --</option>
-                                </select>          
-                            </div>
-                        </div>
-                        <div class="row mb-2 justify-content-center">
-                            <div class="col-md-6">
-                                <label class="form-label">Price</label>
-                                <input id="pricemodal" name="pricemodal" type="text" class="form-control" placeholder="Enter New Price" aria-label="fullname" aria-describedby="basic-addon1">        
+                            <div class="table-responsive scrollable-table-container-sm table-size">
+                                <table class="table table-bordered custom-mobile-table" id="componentsmodal-dataTable" width="100%" cellspacing="10">
+                                    <thead class="table-header">
+                                        <tr>
+                                            <th class = "col-1">Material Name</th> 
+                                            <th class = "col-1">Quantity</th> 
+                                            <th class = "col-1">Cost</th>  
+                                            <th class = "col-1">Units</th> 
+                                            <th class = "col-1">Action</th>    
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
