Completed edit for production components

--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -20,7 +20,7 @@
                                 <input id="componentidmodal" name="componentidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>    
                             </div>
                             <div class="col-md-6">
-                                <button type="button" id="addRow" class="btn btn-outline-inventory">Add Row</button>
+                                <button type="button" id="addRow" class="btn btn-outline-inventory">Add Material</button>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -28,11 +28,12 @@
                                 <table class="table table-bordered custom-mobile-table" id="componentsmodal-dataTable" width="100%" cellspacing="10">
                                     <thead class="table-header">
                                         <tr>
-                                            <th class = "col-1">Material Name</th> 
-                                            <th class = "col-1">Quantity</th> 
-                                            <th class = "col-1">Cost</th>  
-                                            <th class = "col-1">Units</th> 
-                                            <th class = "col-1">Action</th>    
+                                            <th class = "col-3">Material Name</th> 
+                                            <th class = "col-3">Material ID</th> 
+                                            <th class = "col-2">Quantity</th> 
+                                            <th class = "col-2">Cost</th>  
+                                            <th class = "col-2">Units</th> 
+                                            <th>Action</th>    
                                         </tr>
                                     </thead>
                                     <tbody>
