initial UI & script for item price

--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -14,9 +14,11 @@
                         <h6 class="m-0 font-weight-bold table-title">Update Production Components: </h6>
                     </div>
                     <div class="card-body">
+                        <div class="row">
+                            <label class="form-label ml-3">Component ID</label>
+                        </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label">Component ID</label>
                                 <input id="componentidmodal" name="componentidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>    
                             </div>
                             <div class="col-md-6">
@@ -33,7 +35,7 @@
                                             <th class = "col-2">Quantity</th> 
                                             <th class = "col-2">Cost</th>  
                                             <th class = "col-2">Units</th> 
-                                            <th>Action</th>    
+                                            <th></th>    
                                         </tr>
                                     </thead>
                                     <tbody>
